# bento2seldon

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  publish.yml
bento2seldon/: __init__.py  adapter.py  bento.py  cache.py  logging.py  model.py  monitoring.py  seldon.py  utils.py
tests/test_example/: test_todo.py
